Отработатанные части кода

--- a/hw3/assignment/assignment.tex
+++ b/hw3/assignment/assignment.tex
@@ -13,7 +13,7 @@
 \usepackage[unicode]{hyperref}
 \hypersetup{
     colorlinks=true,
-    % allcolors=black
+    allcolors=black
 }
 
 \usepackage{fancyhdr}
@@ -21,9 +21,9 @@
 \pagestyle{fancy}
 \fancyhead[L]{MIPT CDS}
 \fancyhead[C]{Reinforcement Learning}
-\fancyhead[R]{Spring 2023}
+\fancyhead[R]{Spring 2022}
 
-\author{Due May 10}
+\author{Due May 13}
 \title{Assignment 3}
 \date{}
 
@@ -51,26 +51,26 @@
 
 Цель задания --- реализовать и поэкспериментировать с методами Q-обучения и актор-критик.
 
-Данное задание основано на третьем задании курса \href{http://rail.eecs.berkeley.edu/deeprlcourse/}{Deep RL Университета Беркли}.
+Данное задание основано на третьем задании курса по \href{http://rail.eecs.berkeley.edu/deeprlcourse/}{Deep RL Университета Беркли}.
 
 Код задания расположен по адресу
 \begin{center}
-    \href{https://github.com/pkuderov/mipt-rl-hw-2023}{https://github.com/pkuderov/mipt-rl-hw-2023}
+    \href{https://github.com/pkuderov/mipt-rl-hw-2022}{https://github.com/pkuderov/mipt-rl-hw-2022}
 \end{center}
 
-Как и в предыдущих заданиях, у вас есть возможность выполнять его как локально, так и в Google Colab. Подробности, в том числе по установке зависимостей, вы найдете в \verb|README| к третьему заданию в репозитории.
+Как и в предыдущих заданиях, у вас есть возможность выполнять его как локально, так и в Google Colab. Подробности, в том числе по установке зависимостей, вы найдете в \verb|README| ко второму заданию в репозитории.
 
 \subsection{Часть 1. Q-обучение}
 
 Часть 1 практического задания требует, чтобы вы реализовали и оценили качество работы Q-обучения для игры Atari. Так как алгоритм Q-обучения был рассмотрен на лекциях и семинарах, вам будет предоставлен стартовый код.
 
-Это задание можно выполнить и на CPU, хотя, как обычно, на GPU будет работать быстрее. В качестве альтернативы можете воспользоваться Google Colab.
+Это задание будет будет быстрее работать на графическом процессоре, хотя его можно выполнить и на процессоре. Тем не менее рекомендуется использовать Colab, если вы у вас нет доступного графического процессора.
 
 \subsubsection{Файлы}
 
-\hyphenation{до-маш-них}
-\hyphenation{не-об-хо-ди-мые}
-Код задания основан на коде, который вы реализовали в первых двух заданиях. Необходимые для запуска файлы находятся в папке \verb|hw3|. Требуется заполнить своим решением из домашних заданий 1 и 2 места, отмеченные \verb|# TODO: get this from hw1 or hw2|, в следующих файлах:
+\hyphenation{за-да-ниях}
+\hyphenation{на-хо-дят-ся}
+Код задания будет основываться на коде, который вы реализовали в первых двух заданиях. Все файлы, необходимые для запуска вашего кода, находятся в папке hw3, но будут некоторые пустые места, которые требуется заполнить своим решением из домашнего задания 1. Эти места отмечены \verb|# TODO: get this from hw1 or hw2| и находятся в следующих файлах:
 
 \begin{itemize}
     \item \verb|infrastructure/rl_trainer.py|,
@@ -88,15 +88,14 @@
 
 \subsubsection{Реализация Q-обучения}
 
-Первый этап задания заключается в реализации рабочей версии Q-learning. Код по умолчанию запустит игру \textit{Ms. Pac-Man} с разумными настройками гиперпараметров. Найдите маркеры \verb|# TODO| в перечисленных выше файлах для получения инструкций по реализации. Вы можете заглянуть внутрь \verb|infrastructure/dqn_utils.py|, чтобы понять, как работает (оптимизированный для памяти) буфер воспроизведения. Не требуется его модифицировать.
+Первый этап задания заключается в реализации рабочей версии Q-learning. Код по умолчанию запустит игру \textit{Ms. Pac-Man} с разумными настройками гиперпараметров. Найдите маркеры \verb|# TODO| в файлах, перечисленных выше, для получения инструкций по реализации. Вы можете заглянуть внутрь \verb|infrastructure/dqn_utils.py|, чтобы понять, как работает (оптимизированный для памяти) буфер воспроизведения. Вам не нужно будет его модифицировать.
 
 \hyphenation{ги-пер-па-ра-мет-ров}
-Для ответа на некоторые вопросы в задании может потребоваться донастройка гиперпараметров, архитектуры нейронной сети и даже смена игры. Это должно быть сделано путем изменения аргументов командной строки, переданных в \verb|run_hw3_dqn.py|, или путем изменения параметров запука скрипта в Colab.
+Для ответа на некоторые вопросы в задании может потребоваться настройка гиперпараметров, архитектуры нейронной сети и даже смена игры. Это должно быть сделано путем изменения аргументов командной строки, переданных в \verb|run_hw3_dqn.py|, или путем изменения параметров запука скрипта в Colab.
 
-\hyphenation{ре-зуль-та-та}
-Чтобы определить, верна ли ваша реализация Q-learning, вы должны запустить ее с гиперпараметрами по умолчанию в игре \textit{Ms. Pac-Man} на 1 миллион шагов, используя команду к соответствующему заданию из \verb|README|. Эталонное решение достигает результата в 1500 за этот период. В Colab это займет примерно 3 часа GPU. Если вы видите, что обучение занимает намного больше времени, возможно, в вашей реализации есть ошибка.
+Чтобы определить, верна ли ваша реализация Q-learning, вы должны запустить ее с гиперпараметрами по умолчанию в игре \textit{Ms. Pac-Man} на 1 миллион шагов, используя приведенную ниже команду. Эталонное решение достигает результата в 1500 за этот период. В Colab это займет примерно 3 часа GPU. Если вы видите, что обучение занимает намного больше времени, возможно, в вашей реализации есть ошибка.
 
-Мы рекомендуем отладить ваше решение сначала в среде \textit{LunarLander-v3}. Эталонное решение с гиперпараметрами по умолчанию достигает результата около 150 после 350 тыс шагов в среде. Однако нужно быть готовым к большой дисперсии результатов. Без трюка с двойным Q-обучением средняя отдача часто уменьшается после достижения результата 150.
+Мы рекомендуем отладить ваше решение сначала в среде \textit{LunarLander-v3}. Эталонное решение с гиперпараметрами по умолчанию достигает результата около 150 после 350 тыс шагов в среде. Однако нужно быть готовым к большой дисперсии результатов в этой среде, и без трюка с двойным Q-обучением средняя отдача часто уменьшается после достижения результата 150.
 
 \subsubsection{Тестирование Q-обучения}
 
@@ -107,15 +106,13 @@
 
 \hyphenation{до-маш-не-му}
 \hyphenation{ви-зу-али-зи-ро-вать}
-Включите график кривой обучения на \textit{Ms. Pac-Man}. Ось X должна соответствовать количеству временных шагов, а ось Y --- показывать среднее вознаграждение за эпоху, а также лучшее среднее вознаграждение на данный момент. Расчет данных величин уже есть в начальном коде. Как и в предыдущих заданиях, вы можете визуализировать их с помощью Tensorboard. Чтобы получить хорошую производительность, вам не нужно изменять гиперпараметры по умолчанию. Если изменяете какие-либо гиперпараметры, перечислите их, пожалуйста, в подписи к графику.
+Включите график кривой обучения вашей реализации на \textit{Ms. Pac-Man}. Ось X должна соответствовать количеству временных шагов, а ось Y должна показывать среднее вознаграждение за эпоху, а также лучшее среднее вознаграждение на данный момент. Расчет данных величин уже есть в начальном коде. Вы можете визуализировать их с помощью Tensorboard, как и в предыдущих заданиях. Вам не нужно изменять гиперпараметры по умолчанию, чтобы получить хорошую производительность. Если же вы изменяете какие-либо параметры, перечислите их в подписи к графику.
 
-Для запуска эксперимента используйте строку, указанную на странице \verb|README| к третьему домашнему заданию (секция \textit{Experiment 1. Base Q-learning})
+Для запуска эксперимента отталкивайтесь строки, указанной на странице README к третьему домашнему заданию (секция \textit{Experiment 1. Base Q-learning})
 
 \textbf{Задание 2. Качество двойного Q-обучения (DDQN)}
 
-\hyphenation{ис-поль-зо-ва-ние}
-\hyphenation{слу-чай-ных}
-Используйте двойное Q-обучение для повышения точности обучаемых Q-значений за счет снижения их переоценки, свойственных обычному Q-обучению [из-за операции взятия максимума в формуле оценки]. Данная модификация предполагает использование онлайновой Q-сети [вместо целевой] для выбора \textbf{наилучшего действия} при вычислении целевых значений. Сравните производительность DDQN с базовым DQN. Проведите как минимум три запуска с различными инициализациями генератора случайных чисел как для DQN, так и для DDQN. Вы можете использовать \textit{LunarLander-v3} в этом задании. Для запуска эксперимента используйте строки запуска, указанные на странице \verb|README| к третьему домашнему заданию (секция \textit{Experiment 2. DQN vs DDQN}).
+Используйте двойную оценку, чтобы повысить точность обучаемых Q-значений. Это означает использование онлайновой Q-сети [вместо целевой] для выбора \textbf{наилучшего действия} при вычислении целевых значений. Сравните производительность DDQN с базовым DQN. Проведите как минимум три запуска с различными инициализациями генератора случайных чисел как для DQN, так и для DDQN. Вы можете использовать \textit{LunarLander-v3} в этом задании. Для запуска эксперимента используйте строки запуска, указанные на странице README к третьему домашнему заданию (секция \textit{Experiment 2. DQN vs DDQN}).
 
 Приложите к сдаче логи данных запусков. В отчете приведите график со сравнением средних результатов алгоритмов.
 
@@ -129,18 +126,18 @@
 \hyphenation{про-из-во-ди-тель-ность}
 \hyphenation{гра-фи-ке}
 \hyphenation{ис-поль-зо-ван}
-Теперь проанализируем чувствительность Q-обучения к гиперпараметрам. Произвольно выберите один гиперпараметр и запустите алгоритм с не менее чем тремя различными его значениями в дополнение к тому значению, который был использован ранее в задании 1. Приведите график с кривыми обучения для всех четырех значений. В подписи поясните ваш выбор и опишите влияние этого гиперпараметра на производительность. Для запуска эксперимента используйте строки запуска, указанные в \verb|README| к третьему домашнему заданию (секция \textit{Experiment 3. DQN hyperparameters}). Вы можете взять в качестве тестовой среды что-то отличное от Lunar Lander.
+Теперь проанализируем чувствительность Q-обучения к гиперпараметрам. Произвольно выберите один гиперпараметр и запустите алгоритм с не менее чем тремя различными его значениями в дополнение к тому значению, который был использован ранее в задании 1. Приведите график с кривыми обучения для все четырех значений. В подписи поясните ваш выбор и опишите влияние этого гиперпараметра на производительность. Для запуска эксперимента используйте строки запуска, указанные в README к третьему домашнему заданию (секция \textit{Experiment 3. DQN hyperparameters}). Вы можете взять в качестве тестовой среды что-то отличное от Lunar Lander.
 
 \hyphenation{ней-рон-ной}
 \hyphenation{аль-тер-на-ти-ву}
 \hyphenation{же-ла-тель-но}
-Примеры гиперпараметров для исследования: скорость обучения; архитектура нейронной сети, например, количество слоев, размер скрытого слоя и т. д.; расписание исследования или стратегия исследования (например, вы можете реализовать альтернативу эпсилон-жадности и установить разные значения гиперпараметров) и т. д. Желательно сначала поэкспериментировать с разными гиперпараметрами, чтобы найти и выбрать такой параметр, который существенно повлияет на производительность.
+Примеры гиперпараметров для исследования: скорость обучения; архитектура нейронной сети, например, количество слоев, размер скрытого слоя и т. д.; расписание исследования или стратегия исследования (например, вы можете реализовать альтернативу эпсилон-жадности и установить разные значения гиперпараметров) и т. д. Желательно найти и выбрать такой параметр, который существенно повлияет на производительность.
 
 \subsection{Часть 2. Актор-критик}
 
 \hyphenation{прош-лом}
 \hyphenation{об-ра-ти-те}
-Во второй часть практического задания потребуется изменить реализованный во втором домашнем задании алгоритм градиента стратегии до метода актор-критик. Обратите внимание, что обучение критика может занять больше времени, чем обучение актора.
+Во второй часть практического задания потребуется изменить реализованный в прошлом практическом задании алгоритм градиента стратегии до метода актор-критик. Обратите внимание, что обучение критика может занять больше времени, чем обучение актора.
 
 Вспомним, как мы считали градиент стратегии в прошлом задании:
 
@@ -153,7 +150,7 @@
 \noindent
 где мы использовали ``rewards-to-go'' оценку Q-функции и дополнительно вычитали полезность состояния в качестве базового уровня, тем самым получая оценку функции преимущества $A^{\pi}(s_t, a_t)$.
 
-На практике такая оценка значения преимущества отличается высокой дисперсией. В методе актор-критик решается проблема высокой дисперсии путем использования сети критика для оценки полезности. Существуют разные варианты, какую функцию полезности оценивать критиком. Один из них --- функцию полезности состояния. Тогда оценка преимущества может быть задана следующим образом:
+На практике такая оценка значения преимущества отличается высокой дисперсией. В метод актор-критик решается проблема высокой дисперсии путем использования сети критика для оценки полезности. Существуют разные варианты, какую функцию полезности оценивать критиком. Один из них --- функцию полезности состояния. Тогда оценка преимущества может быть задана следующим образом:
 
 \begin{equation}
     A^{\pi}(s_t, a_t) \approx r(s_t, a_t) + \gamma V_{\Phi}^{\pi}(s_{t+1}) - V_{\Phi}^{\pi}(s_t)
@@ -169,9 +166,7 @@
 \end{align}
 
 \hyphenation{рав-но-силь-но}
-\hyphenation{обу-че-ния}
-\hyphenation{зна-че-ни-ям}
-В теории, шаг минимизации необходимо выполнять каждый раз, когда обновляется стратегия агента, чтобы стратегия и функция полезности, которая ее оценивает, были синхронизированы. Однако на практике эта операция обычно чересчур дорогостоящая. Компромиссным решением будет выполнять лишь несколько шагов градиентного спуска для обновления критика на каждой итерации (похожей логикой мы руководствовались, когда на лекциях разбирали переход от Policy Iteration к Value Iteration). Обратите внимание, что это не равносильно кратному увеличению гиперпараметра скорости обучения, так как на каждом шаге градиентного спуска (или раз в несколько шагов, как в текущем задании) мы будем заново пересчитывать целевые значения. В целом, процесс обучения критика представляет собой итеративный процесс, в котором мы постоянно обновляем его оценку полезности, чтобы она примерно соответствовала целевым значениям для меняющейся стратегии актора.
+В теории, шаг минимизации необходимо выполнять каждый раз, когда обновляется стратегия агента, чтобы стратегия и функция полезности, которая ее оценивает, были синхронизированы. Однако на практике эта операция обычно чересчур дорогостоящая. Компромиссным решением будет выполнять лишь несколько шагов градиентного спуска для обновления критика на каждой итерации. Обратите внимание, что это не равносильно кратному увеличению гиперпараметра скорости обучения, так как на каждом шаге градиентного спуска (или раз в несколько шагов, как в текущем задании) мы будем заново пересчитывать целевые значения. В целом, процесс обучения критика представляет собой итеративный процесс, в котором мы постоянно обновляем его оценку полезности, чтобы она соответствовала целевым значениям для меняющейся стратегии актора.
 
 \subsubsection{Реализация метода актор-критик}
 
@@ -180,8 +175,7 @@
 \hyphenation{об-нов-ле-нию}
 \hyphenation{кор-рект-но}
 \hyphenation{тре-буе-мую}
-\hyphenation{за-пол-нить}
-Ваш код будет основан решении второго домашнего задания. Вам потребуется заполнить пропуски, помеченные \verb|TODO| для следующих частей кода:
+Ваш код будет основан на вашем решении из второго домашнего задания. Вам потребуется заполнить пропуски, помеченные \verb|TODO| для следующих частей кода:
 
 \begin{itemize}
     \item В \verb|policies/MLP_policy.py| реализуйте функцию \verb|update| для класса \verb|MLPPolicyAC|. Следует отметить, что класс стратегии актор-критика фактически совпадает с классом стратегии из домашнего задания по градиенту стратегии (за исключением отсутствия базового уровня).
@@ -197,16 +191,16 @@
 
 \textbf{Задание 4. Проверка правильности реализации на CartPole}
 
-Цель этого задания убедиться в правильности вашей реализации на примере простой среды \textit{CartPole-v0}. Для запуска эксперимента используйте строки запуска, указанные на странице \verb|README| к третьему домашнему заданию (секция \textit{Experiment 4. Sanity check with CartPole}). Вам потребуется сравнить качество работы агента с разными частотами обучения критика и обновления целевых функций. Агент с наилучшим набором гиперпараметров должен полностью решать данную среду, набирая результат 200. Подготовьте отчет со сравнением сделанных запусков в виде графика кривых обучения и кратким текстовым пояснением.
+Цель этого задания убедиться в правильности вашей реализации на примере простой среды \textit{CartPole-v0}. Для запуска эксперимента используйте строки запуска, указанные на странице README к третьему домашнему заданию (секция \textit{Experiment 4. Sanity check with CartPole}). Вам потребуется сравнить качество работы агента с разными частотами обучения критика и обновления целевых функций. Агент с наилучшим набором гиперпараметров должен полностью решать данную среду, набирая результат 200. Подготовьте отчет со сравнением сделанных запусков в виде графика кривых обучения и кратким текстовым пояснением.
 
 \textbf{Задание 5. Проверка метода актор-критик на более сложных средах}
 
 \hyphenation{про-тес-ти-руй-те}
 \hyphenation{за-пус-ка}
 \hyphenation{тре-тье-му}
-Используя наилучшие значения гиперпараметров из предыдущего задания, протестируйте качество работы вашей реализации в средах \textit{InvertedPendulum} и \textit{HalfCheetah}. Для запуска эксперимента используйте строки запуска, указанные в \verb|README| к третьему домашнему заданию (секция \textit{Experiment 5. Run actor-critic with more difficult tasks}).
+Используя наилучшие значения гиперпараметров из предыдущего задания, протестируйте качество работы вашей реализации в средах \textit{InvertedPendulum} и \textit{HalfCheetah}. Для запуска эксперимента используйте строки запуска, указанные в README к третьему домашнему заданию (секция \textit{Experiment 5. Run actor-critic with more difficult tasks}).
 
-Ваши результаты должны примерно совпадать с результатами градиента стратегии из второго домашнего задания. После 150 итераций в \textit{HalfCheetah} результат должен быть около 150. После 100 итераций в \textit{InvertedPendulum} результат должен быть около 1000. В начале обучения отдача должна начать расти немедленно. Например, после 20 итераций отдача в \textit{HalfCheetah} должна быть выше -40, а ваш доход \textit{InvertedPendulum} должен быть около или выше 100. Однако, конечно, нужно учитывать, что результаты между запусками могут сильно варьироваться.
+Ваши результаты должны примерно совпадать с результатами градиента стратегии из второго домашнего задания. После 150 итераций в \textit{HalfCheetah} результат должен быть около 150. После 100 итераций в \textit{InvertedPendulum} результат должен быть около 1000. В начале обучения отдача должна начать расти немедленно. Например, после 20 итераций отдача в HalfCheetah должна быть выше -40, а ваш доход InvertedPendulum должен быть около или выше 100. Однако, конечно, нужно учитывать, что результаты между запусками могут сильно варьироваться.
 
 Результатом работы в этом разделе являются графики результатов для каждой из сред.
 
@@ -215,17 +209,14 @@
 
 \textit{Формат сдачи совпадает с форматом сдачи первого практического задания.}
 
-\hyphenation{пред-ло-же-нии}
-Сдача предполагается в виде коммитов и комментариев к ним в соответствующем предложении изменения кода (pull request) в GitHub classroom (ссылка в тг канале курса).
+\hyphenation{ре-по-зи-то-рии}
+Сдача предполагается в виде предложений изменения кода (pull request) в репозитории \href{https://github.com/pkuderov/mipt-rl-hw-2022}{по ссылке в начале практического задания}.
 
-\hyphenation{не-до-ста-ю-щих}
-Ожидается, что сдача будет содержать непосредственно код заполненных вами недостающих частей выданной заготовки решения и логи финальных запусков (для каждого задания и каждой из использованных сред).
+Ожидается, что предложение будет содержать непосредственно код заполненных вами недостающих частей выданного решения и логи финальных запусков (для каждого задания и каждой из использованных сред). 
 
-\hyphenation{от-лич-ной}
-Оригинально все логи лежат в папке \verb|data|. Логи финальных запусков скопируйте из \verb|data| в отдельную папку \verb|run_logs| и отправьте вместе с вашим решением. Отличной альтернативой будет вместо этого снабдить решение ссылкой на отчет (report) в wandb, что потребует самостоятельно интегрировать использование данного сервиса в ваше решение.
+Оригинально все логи лежат в папке \verb|data|. Логи финальных запусков скопируйте из \verb|data| в отдельную папку \verb|run_logs| и отправьте вместе с вашим решением.
 
 \hyphenation{ре-ше-ние}
-\hyphenation{аль-тер-на-ти-ва}
-Также в сообщении к предложению необходимо добавить результаты, описание и решение по каждому из пунктов задания (в соответствии с тем, что оно требует). Разметка markdown позволяет и вставку картинок, и оформление табличек. Опционально, вы можете оформить результаты в виде отдельного файла .doc или .pdf и добавить их в посылку (commit), а в сообщении сослаться на этот файл. Не забудьте для каждого пункта задания код запуска, чтобы можно было воспроизвести ваши результаты.
+В сообщение к предложению необходимо добавить результаты/описание/решение по каждому из пунктов задания (в соответствии с тем, что оно требует). Разметка (markdown) позволяет и вставку картинок, и оформление табличек. Опционально, вы можете оформить результаты в виде отдельного файла .doc или .pdf и добавить их в посылку (commit), а в сообщении сослаться на этот файл. Не забудьте также добавить к каждому пункту задания код запуска, чтобы можно было воспроизвести ваши результаты.
 
 \end{document}
