Assignemnt III for Actor Critic Collab experiments with Cart Pole

--- a/hw3/hw3/scripts/run_hw3_actor_critic.ipynb
+++ b/hw3/hw3/scripts/run_hw3_actor_critic.ipynb
@@ -19,12 +19,12 @@
    },
    "outputs": [],
    "source": [
-    "#@title mount your Google Drive\n",
+    "\"\"\"#@title mount your Google Drive\n",
     "#@markdown Your work will be stored in a folder called `cds_rl_2022` by default to prevent Colab instance timeouts from deleting your edits.\n",
     "\n",
     "import os\n",
     "from google.colab import drive\n",
-    "drive.mount('/content/gdrive')"
+    "drive.mount('/content/gdrive')\"\"\""
    ]
   },
   {
@@ -35,7 +35,7 @@
    },
    "outputs": [],
    "source": [
-    "#@title set up mount symlink\n",
+    "\"\"\"#@title set up mount symlink\n",
     "\n",
     "DRIVE_PATH = '/content/gdrive/My\\ Drive/cds_rl_2022'\n",
     "DRIVE_PYTHON_PATH = DRIVE_PATH.replace('\\\\', '')\n",
@@ -46,7 +46,7 @@
     "## make a symlink to avoid this\n",
     "SYM_PATH = '/content/cds_rl_2022'\n",
     "if not os.path.exists(SYM_PATH):\n",
-    "    !ln -s $DRIVE_PATH $SYM_PATH"
+    "    !ln -s $DRIVE_PATH $SYM_PATH\"\"\""
    ]
   },
   {
@@ -57,7 +57,7 @@
    },
    "outputs": [],
    "source": [
-    "#@title apt install requirements\n",
+    "\"\"\"#@title apt install requirements\n",
     "\n",
     "#@markdown Run each section with Shift+Enter\n",
     "\n",
@@ -98,7 +98,7 @@
     "        ffmpeg\n",
     "\n",
     "# set up git lfs\n",
-    "!git lfs install"
+    "!git lfs install\"\"\""
    ]
   },
   {
@@ -141,10 +141,10 @@
    },
    "outputs": [],
    "source": [
-    "#@title clone homework repo (option #1)\n",
+    "\"\"\"#@title clone homework repo (option #1)\n",
     "%cd $SYM_PATH\n",
     "!git clone https://github.com/pkuderov/mipt-rl-hw-2022.git rl_hw\n",
-    "%cd rl_hw"
+    "%cd rl_hw\"\"\""
    ]
   },
   {
@@ -155,7 +155,7 @@
    },
    "outputs": [],
    "source": [
-    "#@title pull updated repo (option #2)\n",
+    "\"\"\"#@title pull updated repo (option #2)\n",
     "# Don't hesitate to update the script for yourself\n",
     "\n",
     "%cd $SYM_PATH/rl_hw\n",
@@ -166,7 +166,7 @@
     "!git checkout main\n",
     "\n",
     "# update\n",
-    "!git pull"
+    "!git pull\"\"\""
    ]
   },
   {
@@ -177,14 +177,14 @@
    },
    "outputs": [],
    "source": [
-    "#@title install requirements (the same as for previous homeworks + gym[atari] is added)\n",
+    "\"\"\"#@title install requirements (the same as for previous homeworks + gym[atari] is added)\n",
     "%cd hw1\n",
     "%pip install -r requirements.colab.txt\n",
     "%pip install -e .\n",
     "\n",
     "# also install hw3 package\n",
     "%cd ../hw3\n",
-    "%pip install -e ."
+    "%pip install -e .\"\"\""
    ]
   },
   {
@@ -195,7 +195,7 @@
    },
    "outputs": [],
    "source": [
-    "#@title set up the Ms. Pacman environment\n",
+    "\"\"\"#@title set up the Ms. Pacman environment\n",
     "\n",
     "import urllib.request\n",
     "urllib.request.urlretrieve('http://www.atarimania.com/roms/Roms.rar','Roms.rar')\n",
@@ -208,16 +208,28 @@
     "%mv Roms.rar $ATARI_PATH\n",
     "%mv 'HC ROMS' $ATARI_PATH\n",
     "%mv 'ROMS' $ATARI_PATH\n",
-    "!python -m atari_py.import_roms $ATARI_PATH"
+    "!python -m atari_py.import_roms $ATARI_PATH\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "I7bzWLo6U6Jw"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pyvirtualdisplay'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/vj/k3sqvbsj5rg0yftxt88lkyvr0000gn/T/ipykernel_59081/1422786059.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#@title set up virtual display\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mpyvirtualdisplay\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDisplay\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mdisplay\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvisible\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1400\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m900\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pyvirtualdisplay'"
+     ]
+    }
+   ],
    "source": [
     "#@title set up virtual display\n",
     "\n",
@@ -508,7 +520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
